<resources>
    <string name="app_name">Rentron 5.0</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LogIn</string>
    <string name="signup">Signup</string>
    <string name="about_us">About Us</string>
    <string name="loginFailure">Email or Password were incorrect</string>
    <string name="back">Back</string>
    <string name="requests">Requests</string>
    <string name="filter">Filter</string>
    <string name="my_properties">My Properties</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="birthyear">BirthYear</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="rent">Rent</string>
    <string name="rooms">Rooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="floors">Floors</string>
    <string name="area">Area</string>
    <string name="parking">Parking</string>
    <string name="set_filter">Set Filter</string>
    <string name="register_property">Register Property</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="make_ticket">Make Ticket</string>
    <string name="resolve_ticket">Resolve Ticket</string>
    <string name="closed_tickets">Closed Tickets</string>
    <string name="active_tickets">Active Tickets</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="client_menu">Client Menu</string>
    <string name="my_property_menu">My Property Menu</string>
    <string name="property_filter">Property Filter</string>
    <string name="property_manager_menu">Property Manager Menu</string>
    <string name="property_request_menu">Property Request Menu</string>
    <string name="property_registration_menu">Property Registration Menu</string>
    <string name="request_menu">Request Menu</string>
    <string name="create_an_account">Create an Account</string>
    <string name="ticket_maker">Ticket Maker</string>
    <string name="reset">Reset</string>
    <array name="userType">
        <item>Client</item>
        <item>Landlord</item>
        <item>PropertyManager</item>
    </array>
    <array name="hydro">
        <item>Hydro Not Included</item>
        <item>Hydro Included</item>
    </array>
    <array name="water">
        <item>Water Not Included</item>
        <item>Water Included</item>
    </array>
    <array name="heating">
        <item>Heating Not Included</item>
        <item>Heating Included</item>
    </array>
    <array name="propertyType">
        <item>Basement</item>
        <item>Studio</item>
        <item>Apartment</item>
        <item>Townhouse</item>
        <item>House</item>
    </array>
    <array name="ticketType">
        <item>Maintenance</item>
        <item>Security</item>
        <item>Damage</item>
        <item>Infestation</item>
        <item></item>
    </array>
    <string name="aboutUs">
        We are a small team of developers at who are students at the
        University of Ottawa. We are composed of people of members of different
        fields and professions although we are united under one cause to
        learn as much as we can while we are still here. Our goal is to do as much
        as we can while we can and this project was indeed a challenge. I hope you enjoy
        exploring the application and may use it as inspiration if you would like but be
        wary of plagiarism.

        The Mad Hinau Bases Inc.
    </string>

</resources>