<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="@dimen/defaultTextSize"/>

        <Button
            android:id="@+id/backButtonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Spinner
            android:id="@+id/userTypeSpinnerSignup"
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <EditText
            android:id="@+id/firstNameEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/lastNameEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/emailAddressEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

        <EditText
            android:id="@+id/passswordEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/birthYearEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/birthyear" />

        <EditText
            android:id="@+id/streetNumberEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/street_number" />

        <EditText
            android:id="@+id/streetNameEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/street_name" />

        <EditText
            android:id="@+id/postalCodeEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="6"
            android:inputType="text"
            android:hint="@string/postal_code" />

        <EditText
            android:id="@+id/aptNumberEditSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/apartment_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cityEditSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/countryEditSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/country" />
        </LinearLayout>

        <Button
            android:id="@+id/signupButtonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>