<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.PropertyFilterClientActivity">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <Button
                android:id="@+id/backButtonEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <EditText
                android:id="@+id/streetNumberEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/street_number"
                android:inputType="number"
                android:text="0" />

            <EditText
                android:id="@+id/streetNameEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/street_name"
                android:inputType="text"
                android:text="0" />


            <EditText
                android:id="@+id/postalCodeEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/postal_code"
                android:inputType="textPostalAddress"
                android:text="-1" />

            <EditText
                android:id="@+id/aptNumberEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/apartment_number"
                android:inputType="text"
                android:text="A00" />

            <Spinner
                android:id="@+id/typeSpinnerEditProperty"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="What is the Property Type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:text="0">

                <Spinner
                    android:id="@+id/hydroSpinnerEditProperty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Is Hyrdo Included" />

                <Spinner
                    android:id="@+id/heatingSpinnerEditProperty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Is Heating Inclduded" />

                <Spinner
                    android:id="@+id/waterSpinnerEditProperty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Is Water Included" />
            </LinearLayout>

            <EditText
                android:id="@+id/rentEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rent"
                android:inputType="number"
                android:text="0" />

            <EditText
                android:id="@+id/roomsEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rooms"
                android:inputType="number"
                android:text="0" />

            <EditText
                android:id="@+id/bathroomsEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bathrooms"
                android:inputType="number"
                android:text="0" />

            <EditText
                android:id="@+id/floorsEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/floors"
                android:inputType="number"
                android:text="0" />

            <EditText
                android:id="@+id/areaEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/area"
                android:inputType="number"
                android:text="0" />

            <EditText
                android:id="@+id/parkingEditEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/parking"
                android:inputType="number"
                android:text="0" />

            <Button
                android:id="@+id/editButtonEditProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_filter" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>