<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PropertyFilterClientActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_filter"
            android:textSize="@dimen/defaultTextSize"/>

        <Button
            android:id="@+id/backButtonFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cityEditFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Name" />

            <EditText
                android:id="@+id/countryEditFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Name" />
        </LinearLayout>

        <Spinner
            android:id="@+id/typeSpinnerFilter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="What is the Property Type"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/hydroSpinnerFilter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Is Hyrdo Included"/>

            <Spinner
                android:id="@+id/heatingSpinnerFilter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Is Heating Inclduded"/>

            <Spinner
                android:id="@+id/waterSpinnerFilter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Is Water Included"/>
        </LinearLayout>

        <EditText
            android:id="@+id/rentEditFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/rent"
            />

        <EditText
            android:id="@+id/roomsEditFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/rooms"
            />

        <EditText
            android:id="@+id/bathroomsEditFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/bathrooms"
            />

        <EditText
            android:id="@+id/floorsEditFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/floors"
            />

        <EditText
            android:id="@+id/areaEditFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/area"
            />

        <EditText
            android:id="@+id/parkingEditFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/parking"
            />

        <Button
            android:id="@+id/filterButtonFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_filter" />

        <Button
            android:id="@+id/resetButtonFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>