<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TicketMenuActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="889dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/backButtonTicketMenu"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/makeButtonTicketMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_ticket" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activeButtonTicketMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/active_tickets" />

            <Button
                android:id="@+id/closedButtonTicketMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/closed_tickets" />
        </LinearLayout>

        <ListView
            android:id="@+id/ticketListTicketMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </ListView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>