<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LandlordActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/logoutButtonLandlord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/myPropertyButtonLandlord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_properties" />

        <Button
            android:id="@+id/registerButtonLandlord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_property" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>