<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PropertyManagerFinderActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Property Manager Finder"
            android:textSize="@dimen/defaultTextSize"/>

        <Button
            android:id="@+id/backButtonPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
            android:id="@+id/nameTextPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/emailTextPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Email" />

        <TextView
            android:id="@+id/ratingTextPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Rating" />

        <EditText
            android:id="@+id/commissionEditPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <ListView
            android:id="@+id/propertyManagerListPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="389dp" />

        <Button
            android:id="@+id/submitButtonPropertyManagerFinder"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>